# ulppk2

./: .cproject  .project  AUTHORS  Doxyfile  Makefile.am  Makefile.am~  Makefile.in  README  config.h.in  config.h.in~  config4debug  configure  configure.ac  configure.ac~  doxygen.conf  doxygen_log.txt
autom4te.cache/: output.0  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/html/: annotated.html  annotated.js  appenv_8c.html  appenv_8c.js  appenv_8c_source.html  appenv_8h.html  appenv_8h.js  appenv_8h_source.html  bool_8h.html  bool_8h.js  bool_8h_source.html  btacc_8c.html  btacc_8c.js  btacc_8c_source.html  btacc_8h.html  btacc_8h.js  btacc_8h_source.html  classes.html  cmdargs_8c.html  cmdargs_8c.js  cmdargs_8c_source.html  cmdargs_8h.html  cmdargs_8h.js  cmdargs_8h_source.html  config_8h.html  config_8h.js  config_8h_source.html  crc16ccitt_8c.html  crc16ccitt_8c.js  crc16ccitt_8c_source.html  crc16ccitt_8h.html  crc16ccitt_8h.js  crc16ccitt_8h_source.html  dequetool_8c.html  dequetool_8c.js  dequetool_8c_source.html  diagnostics_8c.html  diagnostics_8c.js  diagnostics_8c_source.html  diagnostics_8h.html  (+517 more)
doc/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_6.js  all_61.js  all_62.js  all_64.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_70.js  all_73.js  all_74.js  all_75.js  all_77.js  all_79.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_62.js  classes_65.js  (+109 more)
doc/latex/: annotated.tex  appenv_8c.tex  appenv_8h.tex  bool_8h.tex  btacc_8c.tex  btacc_8h.tex  cmdargs_8c.tex  cmdargs_8h.tex  config_8h.tex  crc16ccitt_8c.tex  crc16ccitt_8h.tex  dequetool_8c.tex  diagnostics_8c.tex  diagnostics_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_8ceed740814d35d593537a165d092dcb.tex  dir_e7fdb585af70d0716dfa03a8845a494a.tex  dir_f45f97518978207c9fe3e8c815672740.tex  dir_f97c989b391daa71637b76dbb104447e.tex  dir_fb3759d3db228fab2d8039b54b8d6c4d.tex  dqacc_8c.tex  dqacc_8h.tex  files.tex  hello_8c.tex  ifile_8c.tex  ifile_8h.tex  index.tex  inifile_8c.tex  inifileparser_8c.tex  inifileparser_8h.tex  ioutils_8c.tex  ioutils_8h.tex  linearlist_8c.tex  linearlist_8h.tex  llacc_8c.tex  llacc_8h.tex  mmapfile_8c.tex  mmapfile_8h.tex  mmatom_8c.tex  mmatom_8h.tex  (+95 more)
src/: Makefile.am  Makefile.am.mmds  Makefile.am~  Makefile.in  core  dequetool.c  dequetool.c.bak  dequetool.c.fix1  hello.c  mmatomx.c  mmbuffpool.c  printinfo.c  test-cmdargs.c  test-datastruct.c  test-dequetool.sh  test-diagnostics.c  test-memmapio.c  test-memmapio.sh  test-pathinfo.c  test-urlencoder.c  ulppk-doc.c
testdata/: dequetest.ipsum.txt  dequetest.txt  test1.txt.ext
ulppk/: Makefile.am  Makefile.am.mmds  Makefile.am.old  Makefile.am~  Makefile.in  appenv.c  appenv.h  bool.h  btacc.c  btacc.h  cmdargs.c  cmdargs.h  crc16ccitt.c  crc16ccitt.h  diagnostics.c  diagnostics.h  dqacc.c  dqacc.h  ifile.c  ifile.h  inifile.c  inifile.l  inifileparser.c  inifileparser.h  inifileparser.y  ioutils.c  ioutils.h  linearlist.c  linearlist.h  llacc.c  llacc.h  mmapfile.c  mmapfile.h  mmatom.c  mmatom.h  mmdeque.c  mmdeque.h  mmfor.c  mmfor.h  mmpool.c  (+34 more)
